--- a/polladmin/templates/create-poll.html
+++ b/polladmin/templates/create-poll.html
@@ -1,6 +1,6 @@
 {% extends "basic-layout.html" %}
 {% block maincontent %}  
-    <h4><a href="/event/{{ event.id }}">{{ event.title }}</a></h4>
+    <h4><a href="/event/{{ event.id }}">Part of the {{ event.title }} event</a></h4>
     <h1>Create a poll</h1>
     
     {% if error %}<p>{{ error }}</p>{% endif %}
@@ -11,8 +11,16 @@
         <input type="text" name="poll_title" id="poll_title" required {% if formdata.poll_title %}value={{formdata.poll_title|escape}}{% endif %} />
         <label for="poll_options">Options</label>
         <textarea cols="25" rows="3" name="poll_options" id="poll_options" required>{% if formdata.poll_options %}{{formdata.poll_options|escape}}{% endif %}</textarea>
-        <label for="poll_categories">Categories</label>
-        <textarea cols="25" rows="3" name="poll_categories" id="poll_categories" required>{% if formdata.poll_categories %}{{formdata.poll_categories|escape}}{% endif %}</textarea>
+        <h3>What factors should they be scored on?</h3>
+        <p>Scoring is always on a three-point scale, from 1 (least) to 3 (most).</p>
+        <p>Much of the time, the best possible score for a factor will be 3.</p>
+        <p>However, sometimes you will want a high score in a particular factor to be bad. The best score for this kind of factor is not 3, but 1. One example of this might be 'difficulty', where an option which has high difficulty is less good than one with low difficulty.</p>
+        <label for="poll_categories_desc">Factors whose best score is high</label>
+        <p>For instance value, impact, strategic alignment</p>
+        <textarea cols="25" rows="3" name="poll_categories_desc" id="poll_categories_desc" required>{% if formdata.poll_categories %}{{formdata.poll_categories|escape}}{% endif %}</textarea>
+        <label for="poll_categories_asc">Factors whose best score is low</label>
+        <p>For instance cost, risk, time to release</p>
+        <textarea cols="25" rows="3" name="poll_categories_asc" id="poll_categories_asc" required>{% if formdata.poll_categories %}{{formdata.poll_categories|escape}}{% endif %}</textarea>
         <input type="submit" value="create poll"/>
 
     <h2>Options</h2> 
