--- a/polladmin/templates/basic-layout.html
+++ b/polladmin/templates/basic-layout.html
@@ -1,7 +1,65 @@
-<html>
-    <head></head>
-    <body>
-        {% block maincontent %}
-        {% endblock %}
-    </body>
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Easier matrix voting for workshops">
+
+        <title>Ratchit</title>
+    <link href='https://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="/static/css/pure-min.css">
+
+
+    <!--[if lte IE 8]>
+      
+        <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/grids-responsive-old-ie-min.css">
+      
+    <![endif]-->
+    <!--[if gt IE 8]><!-->
+      
+        <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/grids-responsive-min.css">
+      
+    <!--<![endif]-->
+
+    <!--[if lte IE 8]>
+        <link rel="stylesheet" href="css/layouts/blog-old-ie.css">
+    <![endif]-->
+    <!--[if gt IE 8]><!-->
+        <link rel="stylesheet" href="/static/css/blog.css">
+    <!--<![endif]-->
+        <link rel="stylesheet" href="/static/css/main-polladmin.css">
+</head>
+<body>
+
+
+<div id="layout" class="pure-g">
+    <div class="sidebar pure-u-1 pure-u-md-1-4">
+        <div class="header">
+            <h1 class="brand-title">Ratchit</h1>
+            <h2 class="brand-tagline">Easier matrix voting for workshops</h2>
+
+            <nav class="nav">
+                <ul class="nav-list">
+                    <li class="nav-item">
+                        <a class="pure-button" href="/">See all events</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+
+    <div class="content pure-u-1 pure-u-md-3-4">
+        <div>
+                    {% block maincontent %}
+                    {% endblock %}
+
+        </div>
+</div>
+
+
+
+
+
+
+</body>
 </html>
