--- a/polladmin/templates/event.html
+++ b/polladmin/templates/event.html
@@ -1,6 +1,6 @@
 {% extends "basic-layout.html" %}
 {% block maincontent %}     
-    <h5 class="breadcrumb" ><<a href="/">all events</a></h5>
+    <h5 class="breadcrumb" ><a href="/">all events</a></h5>
     <h2>{{ event.title }}</h2>
     <h3>Polls</h3>  
 
