Add participant link to poll and event page

--- a/polladmin/templates/event.html
+++ b/polladmin/templates/event.html
@@ -1,6 +1,6 @@
 {% extends "basic-layout.html" %}
 {% block maincontent %}     
-    <h5 class="breadcrumb" ><a href="/">all events</a></h5>
+    <h5 class="breadcrumb" ><<a href="/">all events</a></h5>
     <h2>{{ event.title }}</h2>
     <h3>Polls</h3>  
 
@@ -9,7 +9,7 @@
         <a class="pure-button" href="/event/{{ event.pk }}/create-poll">Create poll</a>
     {% else %}
         {% for poll in polls %}
-            <p class="title"><a href="/event/{{ event.pk }}/poll/{{ poll.pk }}">{{ poll.title }} {% if event.ratings %}(and results){% endif %}</a></p>
+            <p class="title"><a href="/event/{{ event.pk }}/poll/{{ poll.pk }}">{{ poll.title }}</a> <a href="/rate/{{ poll.rating_hash }}" target="_blank">(participant link)</a></p>
         {% endfor %}
     
     
