--- a/ratings/templates/option-category.html
+++ b/ratings/templates/option-category.html
@@ -11,8 +11,8 @@
 
 </div></div>
 
-<a href="{{category.rating_hash}}/3"><div class="rating" id="most"><p>Most</p></div></a>
-<a href="{{category.rating_hash}}/2"><div class="rating" id="middle"></div></a>
-<a href="{{category.rating_hash}}/1"><div class="rating" id="least"><p>Least</p></div></a>
+<a href="{{category.rating_hash}}/most"><div class="rating" id="most"><p>Most</p></div></a>
+<a href="{{category.rating_hash}}/middle"><div class="rating" id="middle"></div></a>
+<a href="{{category.rating_hash}}/least"><div class="rating" id="least"><p>Least</p></div></a>
 
 {% endblock %}
