--- a/ratings/templates/basic-ratings-layout.html
+++ b/ratings/templates/basic-ratings-layout.html
@@ -2,6 +2,7 @@
 <head>
     <link rel="stylesheet" href="/static/css/main-rating.css">
     <link href='https://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700' rel='stylesheet' type='text/css'>
+    <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;" />
 </head>
 <body>
     {% block maincontent %}
